--- a/src/main/res/values-cs/strings.xml
+++ b/src/main/res/values-cs/strings.xml
@@ -93,6 +93,7 @@
     <string name="general_spinner_title">Zvolte akci</string>
     <string name="general_profile_error">Chyba při načítání profilu</string>
     <string name="general_dbl_all">Všichni</string>
+    <string name="general_dbl_unread">Nepřečtené</string>
     <string name="time_yesterday">Včera</string>
     <string name="time_today">Dnes</string>
     <string name="general_send_button">Odesl.</string>
@@ -289,12 +290,12 @@
     <string name="gallery">Galerie</string>
     <string name="no_photo_take_photo">Nikdo se s Vámi nemůže seznámit! Vytvořte fotku nebo vyberte některou fotku ze svých alb</string>
     <string name="photo_for_avatar">Fotka je připravena k odeslání do profilu! To je Vaše první fotografie a bude použita jako Vaše profilová   fotka.</string>
-    <string name="change_email">Změnit e-mail</string>
     <string name="send_confirmation_email">Odeslat potvrzení na e-mail</string>
     <string name="change_password">Změnit heslo</string>
     <string name="password_changing">Změna hesla</string>
     <string name="save">Uložit</string>
     <string name="confirmation_successfully_sent">Potvrzení bylo odesláno na uvedenou emailovou adresu</string>
+    <string name="password_hint">heslo</string>
     <string name="password_confirmation_hint">potvrzení hesla</string>
     <string name="enter_new_password">Zadejte nové heslo</string>
     <string name="enter_password_confirmation">Zadejte heslo ještě jednou</string>
@@ -407,7 +408,6 @@
     <string name="delete">Odstranit</string>
     <string name="delete_account_warning">Pozor! Pokoušíte se smazat svůj profil na Topface.</string>
     <string name="delete_account_error">Bohužel se odstranění Vašého účtu nezdařilo. Můžete opakovat ještě jednou.</string>
-    <string name="delete_account_will_be_restored_are_you_sure">Pokoušíte se přihlásit na Vámi odstraněný účet. Při přihlášení Váš účet bude obnoven. Jste si jisti?</string>
     <string name="restore">Obnovit</string>
     <string name="admiration_sended">Obdiv je odeslán</string>
     <string name="auth_btn_ok">Přihlásit se přes Odnoklassniki</string>
