--- a/src/main/res/values-hu/strings.xml
+++ b/src/main/res/values-hu/strings.xml
@@ -64,6 +64,7 @@
     <string name="general_spinner_title">Válaszon egy műveletet</string>
     <string name="general_profile_error">Profil feltöltés hiba</string>
     <string name="general_dbl_all">Össze</string>
+    <string name="general_dbl_unread">Helytelen</string>
     <string name="time_yesterday">Tegnap</string>
     <string name="time_today">Ma</string>
     <string name="general_send_button">Küldés</string>
