--- a/src/main/res/values-pl/strings.xml
+++ b/src/main/res/values-pl/strings.xml
@@ -92,6 +92,7 @@
     <string name="general_spinner_title">Wybierz działanie</string>
     <string name="general_profile_error">Błąd przy ładowaniu profilu</string>
     <string name="general_dbl_all">Wszystkie</string>
+    <string name="general_dbl_unread">Nieprzeczytane</string>
     <string name="time_yesterday">Wczoraj</string>
     <string name="time_today">Dziś</string>
     <string name="general_send_button">Wyśl.</string>
@@ -286,12 +287,12 @@
     <string name="gallery">Galeria</string>
     <string name="no_photo_take_photo">Nikt nie może z Tobą się poznać! Zrób zdjęcie lub wybierz z albumu</string>
     <string name="photo_for_avatar">Zdjęcie jest gotowe do zapisywania się w profilu! To Twoje pierwsze zdjęcie i ono będzie wykorzystywane jako zdjęcie profilowe</string>
-    <string name="change_email">Zmień e-mail</string>
     <string name="send_confirmation_email">Wysłać potwierdzenie na e-mail</string>
     <string name="change_password">Zmień hasło</string>
     <string name="password_changing">Zmiana hasła</string>
     <string name="save">Zapisz</string>
     <string name="confirmation_successfully_sent">Potwierdzenie zostało wysłane na wskazany przez Ciebie e-mail</string>
+    <string name="password_hint">hasło</string>
     <string name="password_confirmation_hint">potwierdzenie hasła</string>
     <string name="enter_new_password">Wpisz nowe hasło</string>
     <string name="enter_password_confirmation">Wpisz potwierdzenie hasła</string>
