--- a/src/main/res/values-sk/strings.xml
+++ b/src/main/res/values-sk/strings.xml
@@ -93,6 +93,7 @@
     <string name="general_spinner_title">Vyberte činnosť</string>
     <string name="general_profile_error">Chyba pri načítaní profilu</string>
     <string name="general_dbl_all">Všetci</string>
+    <string name="general_dbl_unread">Neprečítané</string>
     <string name="time_yesterday">Včera</string>
     <string name="time_today">Dnes</string>
     <string name="general_send_button">Odosl.</string>
@@ -289,12 +290,12 @@
     <string name="gallery">Galéria</string>
     <string name="no_photo_take_photo">Nikto sa s Vami nemôže zoznámiť! Vyfotografujte sa alebo vyberte už existujpcu fotografiu z albumu</string>
     <string name="photo_for_avatar">Fotografia je pripravená na odoslanie do profilu! Je to Vaša prvá fotografia, bude použítá ako profilový obrázok.</string>
-    <string name="change_email">Zmeniť e-mail</string>
     <string name="send_confirmation_email">Odoslať potvrdenie na e-mail</string>
     <string name="change_password">Zmeniť heslo</string>
     <string name="password_changing">zmena hesla</string>
     <string name="save">Uložiť</string>
     <string name="confirmation_successfully_sent">Potvrdenie bolo poslané na uvedený e-mail.</string>
+    <string name="password_hint">heslo</string>
     <string name="password_confirmation_hint">potvrdenie hesla</string>
     <string name="enter_new_password">Zadajte nové heslo</string>
     <string name="enter_password_confirmation">Zadajte potvrdzujúce heslo</string>
@@ -406,7 +407,6 @@
     <string name="delete">Vymazať</string>
     <string name="delete_account_warning">Pozor! Pokúšate sa zrušiť svoj profil na Topface.</string>
     <string name="delete_account_error">Váš účet sa bohužiaľ nepodarilo zrušiť. Môžete sa o to pokúsiť ešte raz.</string>
-    <string name="delete_account_will_be_restored_are_you_sure">Pokúšate sa vojsť do Vami zrušeného účtu na Topface. Ak vojdete obnovíte ho. Ste si istí?</string>
     <string name="restore">Obnoviť</string>
     <string name="admiration_sended">Údiv bol poslaný</string>
     <string name="auth_btn_ok">Prihlásiť sa cez Odnoklassniki</string>
