--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -135,6 +135,7 @@
     <string name="general_spinner_title">Choose an action</string>
     <string name="general_profile_error">Error loading profile</string>
     <string name="general_dbl_all">All</string>
+    <string name="general_dbl_unread">Unread</string>
     <string name="time_yesterday">Yesterday</string>
     <string name="time_today">Today</string>
     <string name="general_send_button">Send</string>
@@ -166,8 +167,8 @@
     <string name="chat_like_out">Like is sent.</string>
     <string name="chat_mutual_in">You have received an admiration.</string>
     <string name="chat_mutual_out">You have sent an admiration.</string>
-    <string name="chat_wish_in">Someone has sent you their Secret Desire</string>
-    <string name="chat_wish_out">Secret Wish is sent.</string>
+    <string name="chat_wish_in">Someone has sent you their Secret Desire.</string>
+    <string name="chat_wish_out">Secret Desire is sent.</string>
     <string name="chat_sexuality_in">Your sexuality has been rated.</string>
     <string name="chat_sexuality_out">You have rated a sexuality.</string>
     <string name="chat_wink_in">You have received a wink.</string>
@@ -183,20 +184,20 @@
     <string name="filter_cities_all">All cities</string>
     <string name="buying_header_title">Purchases</string>
     <plurals name="buying_gift_you_need_coins">
-        <item quantity="other">To be able to send a gift, buy %d more coins</item>
-        <item quantity="one">To be able to send a gift, buy %d more coin</item>
+        <item quantity="other">To be able to send a gift, get %d more coins</item>
+        <item quantity="one">To be able to send a gift, get %d more coin</item>
     </plurals>
     <plurals name="buying_admiration_you_need_coins">
-        <item quantity="other">To send an admiration, buy %d more coins</item>
-        <item quantity="one">To send an admiration, buy %d more coin</item>
+        <item quantity="other">To send an admiration, get %d more coins</item>
+        <item quantity="one">To send an admiration, get %d more coin</item>
     </plurals>
     <plurals name="buying_unlock_likes_you_need_coins">
-        <item quantity="other">To be able to see who likes you, buy %d more coins</item>
-        <item quantity="one">To be able to see who likes you, buy %d more coin</item>
+        <item quantity="other">To be able to see who likes you, get %d more coins</item>
+        <item quantity="one">To be able to see who likes you, get %d more coin</item>
     </plurals>
     <plurals name="buying_leaders_you_need_coins">
-        <item quantity="other">To be able to be seen by everyone, buy %d more coins</item>
-        <item quantity="one">To be able to be seen by everyone, buy %d more coin</item>
+        <item quantity="other">To be able to be seen by everyone, get %d more coins</item>
+        <item quantity="one">To be able to be seen by everyone, get %d more coin</item>
     </plurals>
     <plurals name="buying_you_need_coins">
         <item quantity="other">You are short of %d coins</item>
@@ -281,7 +282,7 @@
     </plurals>
     <string name="novice_sympathy">Send likes only to those\nwho really attract you.\nYou just might find someone special!</string>
     <string name="general_edit_profile_message">Please, fill in all the necessary fields in you profile.</string>
-    <string name="general_search_null_response_error">Not found. Try to change the filters.</string>
+    <string name="general_search_null_response_error">No one is found. Try to change the filters.</string>
     <string name="change_filters">Change filters</string>
     <string name="reset_filter">Reset</string>
     <string name="general_sex">Sex</string>
@@ -321,7 +322,7 @@
     <string name="vip_info_message">Get more attention - your messages will stand out in the general background!</string>
     <string name="vip_info_blackList">Get rid of pesky persons with the help of  the \"Blacklist\"</string>
     <string name="vip_info_vip">With a VIP-status you will stand out of the crowd in the \"dating\" section, as well as in your profile.</string>
-    <string name="buying_vip_status">Buy VIP-status</string>
+    <string name="buying_vip_status">Get a VIP-status</string>
     <string name="edit_my_city">My city</string>
     <string name="settings_feedback_email">Enter your email to get a reply from us.</string>
     <string name="settings_invalid_email">Invalid email</string>
@@ -375,12 +376,12 @@
     <string name="gallery">Photo gallery</string>
     <string name="no_photo_take_photo">No one can meet you! Take a photo or choose one from your photo gallery.</string>
     <string name="photo_for_avatar">Your photo is ready to be sent to your profile! This is your first uploaded one, which will be used as your profile photo.</string>
-    <string name="change_email">Change the email</string>
     <string name="send_confirmation_email">Send a confirmational email</string>
     <string name="change_password">Change password</string>
     <string name="password_changing">Change password</string>
     <string name="save">Save</string>
     <string name="confirmation_successfully_sent">Confirmation was successfully sent to your email.</string>
+    <string name="password_hint">password</string>
     <string name="password_confirmation_hint">password confirmation</string>
     <string name="enter_new_password">Enter your new password</string>
     <string name="enter_password_confirmation">Confirm your password</string>
@@ -440,10 +441,10 @@
         <item quantity="other">Get free VIP for %d invitations</item>
         <item quantity="one">Get free VIP for %d invitation</item>
     </plurals>
-    <string name="buy_status_and_watch_your_fans">Buy VIP-status and find out who added you to their favorites.</string>
+    <string name="buy_status_and_watch_your_fans">Get a VIP-status and find out who added you to their favorites.</string>
     <string name="add_bookmarks_to_be_connected">Add new acquaintances to this section and you will never lose touch with them.</string>
     <string name="nobody_chat_with_you_sympathies_will_help">No one has written to you yet. The likes will help you find someone to chat with.</string>
-    <string name="rate_and_have_mutual_or_buy_and_chat">Send likes to the people you would like to get to know better, and get mutual likes! Or buy likes and start chatting with those who already like you!</string>
+    <string name="rate_and_have_mutual_or_buy_and_chat">Send likes to the people you would like to get to know better, and get mutual likes! Or get likes and start chatting with those who already like you!</string>
     <string name="with_vip_find_your_visitors">With a VIP-status you can find out who checked out your page.</string>
     <string name="on_avatar">Set as your profile picture</string>
     <string name="your_avatar">Profile picture</string>
@@ -492,7 +493,6 @@
     <string name="delete">Delete</string>
     <string name="delete_account_warning">Attention! You are trying to delete your profile in Topface.</string>
     <string name="delete_account_error">Unfortunately, your attempt to delete your account has failed. You can try it again.</string>
-    <string name="delete_account_will_be_restored_are_you_sure">You are trying to log in to your deleted account. If you log in, your account will be restored. Are you sure?</string>
     <string name="restore">Restore</string>
     <string name="admiration_sended">Admiration is sent.</string>
     <string name="skip">Skip</string>
@@ -579,7 +579,7 @@
     <string name="email_changing">Email change</string>
     <string name="hint_faces_filter">Change search options and meet new interesting people.</string>
     <string name="hint_faces_buy_like">The more likes you have, the more often you get rated. Don\'t forget to refill the likes balance.</string>
-    <string name="hint_myprofile_buy_vip">Buy VIP-status and enjoy unlimited communication</string>
+    <string name="hint_myprofile_buy_vip">Get a VIP-status and enjoy unlimited communication</string>
     <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
     <string name="pull_to_refresh_release_label">Let go to refresh…</string>
     <string name="messaging_block_buy_vip">To continue the dialogue you need to have a VIP\u2011status</string>
@@ -594,6 +594,7 @@
     <string name="preload_photo_type_preload_off">Off</string>
     <string name="wrong_time_popup_text">Cannot establish a safe connection.\nMaybe the date or time settings on your device have been set incorrectly.</string>
     <string name="wrong_time_popup_button">View settings</string>
+    <string name="go_tf">I\'m sending you a Mystery Box!</string>
     <string name="google_service_general_title">Reminders are not available</string>
     <string name="google_service_disabled_title">You have Google Play disabled. You need to enable it to receive reminders.</string>
     <string name="google_service_disabled_button">Enable</string>
