--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -112,7 +112,7 @@
     <string name="pincode_auth_input">You need to enter your login and password.</string>
     <string name="pincode_will_be_reset">If the authorization is successful, all app settings will be reset.</string>
     <plurals name="pincode_interval">
-        <item quantity="zero">Right after logging out</item>
+        <item quantity="zero">right away</item>
         <item quantity="other">%d min</item>
         <item quantity="one">%d min</item>
     </plurals>
@@ -136,6 +136,9 @@
     <string name="general_profile_error">Error loading profile</string>
     <string name="general_dbl_all">All</string>
     <string name="general_dbl_unread">Unread</string>
+    <string name="general_empty_code_confirmation">Enter confirmation code</string>
+    <string name="general_email_success_confirmed">Your email was successfully confirmed</string>
+    <string name="general_email_not_confirmed">Your email wasn\'t confirmed</string>
     <string name="time_yesterday">Yesterday</string>
     <string name="time_today">Today</string>
     <string name="general_send_button">Send</string>
@@ -258,6 +261,9 @@
     <string name="settings_rights_reserved">Topface \nAll rights reserved.</string>
     <string name="settings_extra">You can find more information on</string>
     <string name="settings_logout">Log out</string>
+    <string name="settings_code_confirmation">Send confirmation code</string>
+    <string name="settings_email_was_confirmed">Already confirmed</string>
+    <string name="settings_code_confirmation_hint">Confirmation code</string>
     <string name="settings_logout_msg">Do you really want to log out?</string>
     <string name="settings_error_message">Error message</string>
     <string name="settings_ask_developer">Ask our developers</string>
@@ -376,6 +382,7 @@
     <string name="gallery">Photo gallery</string>
     <string name="no_photo_take_photo">No one can meet you! Take a photo or choose one from your photo gallery.</string>
     <string name="photo_for_avatar">Your photo is ready to be sent to your profile! This is your first uploaded one, which will be used as your profile photo.</string>
+    <string name="change_email">Change email</string>
     <string name="send_confirmation_email">Send a confirmational email</string>
     <string name="change_password">Change password</string>
     <string name="password_changing">Change password</string>
@@ -493,6 +500,7 @@
     <string name="delete">Delete</string>
     <string name="delete_account_warning">Attention! You are trying to delete your profile in Topface.</string>
     <string name="delete_account_error">Unfortunately, your attempt to delete your account has failed. You can try it again.</string>
+    <string name="delete_account_will_be_restored_are_you_sure">You are trying to log in to a deleted account. The account will be restored after you log in.</string>
     <string name="restore">Restore</string>
     <string name="admiration_sended">Admiration is sent.</string>
     <string name="skip">Skip</string>
@@ -595,6 +603,8 @@
     <string name="wrong_time_popup_text">Cannot establish a safe connection.\nMaybe the date or time settings on your device have been set incorrectly.</string>
     <string name="wrong_time_popup_button">View settings</string>
     <string name="go_tf">I\'m sending you a Mystery Box!</string>
+    <string name="enter_text">Enter text</string>
+    <string name="send_feedback">Send message</string>
     <string name="google_service_general_title">Reminders are not available</string>
     <string name="google_service_disabled_title">You have Google Play disabled. You need to enable it to receive reminders.</string>
     <string name="google_service_disabled_button">Enable</string>
