--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -381,10 +381,12 @@
     <string name="password_changing">Change password</string>
     <string name="save">Save</string>
     <string name="confirmation_successfully_sent">Confirmation was successfully sent to your email.</string>
-    <string name="password_confirmation_hint">password confirmation</string>
+    <string name="password_confirmation_hint">Password confirmation</string>
     <string name="enter_new_password">Enter your new password</string>
+    <string name="enter_old_password">Enter your old password</string>
     <string name="enter_password_confirmation">Confirm your password</string>
     <string name="passwords_mismatched">Passwords do not match</string>
+    <string name="old_password_mismatched">Wrong old password</string>
     <string name="passwords_changed">Password is changed</string>
     <string name="take_photo">Take a photo</string>
     <string name="take_another_photo">Another photo</string>
