--- a/src/main/res/values-tr/strings.xml
+++ b/src/main/res/values-tr/strings.xml
@@ -383,6 +383,7 @@
     <string name="gallery">Galeri</string>
     <string name="no_photo_take_photo">Sizinle kimse tanışamıyor! Fotoğraf çekin veya mevcut albümden seçin</string>
     <string name="photo_for_avatar">Fotoğraf profilinize yüklenmek için hazırdır! Bu sizin ilk fotoğrafınız ve o profil resmi olarak kullanılacaktır.</string>
+    <string name="change_email">e-mail adresi değiştermek</string>
     <string name="send_confirmation_email">E-maile onay göndermek</string>
     <string name="change_password">Parola değiştirmek</string>
     <string name="password_changing">Parolanın değiştirilmesi</string>
@@ -608,6 +609,7 @@
     <string name="preload_photo_type_preload_off">Kapalı</string>
     <string name="wrong_time_popup_text">Sunucunuza güveli bir bağlantı kurulamadı/nMuhtemelen tarih ve saat bilgisayarınızda ayarlanmadı.</string>
     <string name="wrong_time_popup_button">Ayarları açın</string>
+    <string name="send_feedback">mesaj göndermek</string>
     <string name="google_service_general_title">İkaz mevcut değildir</string>
     <string name="google_service_disabled_title">Google Play servisleri bildirimleri kapamak için gereklidir.</string>
     <string name="google_service_disabled_button">Açmak</string>
