--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -619,5 +619,7 @@
     <string name="google_sign_in_account_title">Your Google account has not been added. You have to sign in, if you want to receive reminders.</string>
     <string name="google_sign_in_account_button">Sign in</string>
     <string name="google_unavailable_services_title">Unfortunately, the remainders are not available on your device.</string>
+    <string name="on_phone">To mobile</string>
+    <string name="on_mail">To email</string>
     <string name="add_leader_hint">Your greeting…</string>
 </resources>
