--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -508,10 +508,13 @@
     <string name="password_changing">Изменение пароля</string>
     <string name="save">Сохранить</string>
     <string name="confirmation_successfully_sent">Подтверждение выслано на указанный вами e-mail</string>
-    <string name="password_confirmation_hint">подтверждение пароля</string>
+    <string name="password_confirmation_hint">Подтверждение пароля</string>
     <string name="enter_new_password">Введите новый пароль</string>
+    <string name="enter_old_password">Введите старый пароль</string>
     <string name="enter_password_confirmation">Введите подтверждение пароля</string>
     <string name="passwords_mismatched">Пароли не совпадают</string>
+    <string name="old_password_mismatched">Неверный старый пароль</string>
+    <string name="passwords_matched">Новый и старый пароли совпадают</string>
     <string name="passwords_changed">Пароль изменен</string>
 
     <string name="take_photo">Сделать фото</string>
