- gifts bitmap processing fixes - notifications in settings fixed to clickable - gifts more-counter fixed to text when profile is not returning value

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -809,4 +809,5 @@
     <string name="on_mail">На e-mail</string>
 
     <string name="add_leader_hint">Ваше приветствие&#8230;</string>
+    <string name="more">еще</string>
 </resources>
