--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -624,4 +624,5 @@
     <string name="on_phone">To mobile</string>
     <string name="on_mail">To email</string>
     <string name="add_leader_hint">Your greeting…</string>
+    <string name="more">more</string>
 </resources>
