--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -453,7 +453,7 @@
     <string name="buy_status_and_watch_your_fans">Get a VIP-status and find out who added you to their favorites.</string>
     <string name="add_bookmarks_to_be_connected">Add new acquaintances to this section and you will never lose touch with them.</string>
     <string name="nobody_chat_with_you_sympathies_will_help">No one has written to you yet. The likes will help you find someone to chat with.</string>
-    <string name="rate_and_have_mutual_or_buy_and_chat">Send likes to the people you would like to get to know better, and get mutual likes! Or get likes and start chatting with those who already like you!</string>
+    <string name="rate_and_have_mutual_or_buy_and_chat">Send likes and get ones and start chating right now</string>
     <string name="with_vip_find_your_visitors">With a VIP-status you can find out who checked out your page.</string>
     <string name="on_avatar">Set as your profile picture</string>
     <string name="your_avatar">Profile picture</string>
@@ -624,5 +624,4 @@
     <string name="on_phone">To mobile</string>
     <string name="on_mail">To email</string>
     <string name="add_leader_hint">Your greeting…</string>
-    <string name="more">more</string>
 </resources>
