- notification settings array chaned to strings' items - fixes crash in profile photo fragment when there is photos null object

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -798,13 +798,11 @@
     <string name="google_sign_in_account_title">У вас не добавлен Google аккаунт, вы должны авторизоваться, если хотите получать уведомления.</string>
     <string name="google_sign_in_account_button">Авторизоваться</string>
     <string name="google_unavailable_services_title">К сожалению, уведомления не поддерживаются на вашем устройстве.</string>
-    <string-array name="receive_notifications">
-        <item name="receive_message_notification">Получать уведомление\nо новом сообщении</item>
-        <item name="receive_mutual_notification">Получать уведомление\nо новой взаимной симпатии</item>
-        <item name="receive_sympathy_notification">Получать уведомление\nо новой симпатии</item>
-        <item name="receive_rate_notification" />
-        <item name="receive_guest_notification">Получать уведомление\nо новом госте</item>
-    </string-array>
+    <string name="receive_message_notification">Получать уведомление\nо новом сообщении</string>
+    <string name="receive_mutual_notification">Получать уведомление\nо новой взаимной симпатии</string>
+    <string name="receive_sympathy_notification">Получать уведомление\nо новой симпатии</string>
+    <string name="receive_rate_notification" />
+    <string name="receive_guest_notification">Получать уведомление\nо новом госте</string>
     <string name="on_phone">На телефон</string>
     <string name="on_mail">На e-mail</string>
 
