--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -213,7 +213,7 @@
     <string name="album_add_photo_title">Add a photo</string>
     <string name="profile_add_album">Choose from the library</string>
     <string name="profile_add_camera">Take a photo</string>
-    <string name="profile_photo">Photo</string>
+    <string name="profile_photo">Photos</string>
     <string name="profile_form">Profile form</string>
     <string name="profile_gifts">Gifts</string>
     <string name="profile_actions">Actions</string>
