--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -810,7 +810,8 @@
     <string name="more">еще</string>
 
     <!--invite frends by sms-->
-    <string name="premium_for_invitations">Пригласите 3 друга и после их регистрации в Topface вы получите вип на сутки!</string>
+    <string name="premium_for_invitations">Для получения VIP статуса на 1 день вам необходимо набрать 5 регистраций.</string>
+    <string name="premium_for_invitations_current_status">Вы уже набрали:\nПриглашений: %1$d\nРегистраций: %2$d</string>
     <string name="no_contacts_available">На устройстве нет контактов, доступных к отображению</string>
     <string name="sms_invite_title">Получите вип на сутки!</string>
     <string name="sms_invite_subtitle">Получите вип на сутки!</string>
@@ -818,6 +819,6 @@
     <!--phones number statuses-->
     <string name="status_can_send_confirmation">Пригласить</string>
     <string name="status_invilid_phone_number">Номер не валиден</string>
-    <string name="status_confirmation_was_sent">Приглашение отправлено</string>
-    <string name="status_user_registered">Пользователь зарегистрирован</string>
+    <string name="status_confirmation_was_sent">Ожидает регистрации</string>
+    <string name="status_user_registered">Уже зарегистрирован</string>
 </resources>
