--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -786,7 +786,7 @@
     <string name="enter_text">Введите текст</string>
     <string name="send_feedback">Отправить сообщение</string>
     <string name="get_vip_free">Получи VIP бесплатно</string>
-
+    <string name="buy_more_sympathies">"Получай больше симпатий, становись популярнее"</string>
 
     <!-- ServicesManager-->
     <!-- Google -->
