--- a/src/main/res/values-el/strings.xml
+++ b/src/main/res/values-el/strings.xml
@@ -366,8 +366,8 @@
     <string name="password_changing">Αλλαγή κωδικού</string>
     <string name="save">Αποθήκευση</string>
     <string name="confirmation_successfully_sent">Η επιβεβαίωση θα αποσταλεί στο e-mail σας</string>
+    <string name="password_confirmation_hint">Επιβεβαίωση του κωδικού της πρόσβασης</string>
     <string name="password_hint">το κωδικό</string>
-    <string name="password_confirmation_hint">επιβεβαίωση κωδικού</string>
     <string name="enter_new_password">Εισάγετε τον νέο κωδικό</string>
     <string name="enter_password_confirmation">Επιβεβαίωση κωδικού</string>
     <string name="passwords_mismatched">Οι κωδικοί πρόσβασης δεν ταιριάζουν</string>
