--- a/src/main/res/values-es/strings.xml
+++ b/src/main/res/values-es/strings.xml
@@ -393,8 +393,8 @@
     <string name="save">Guardar</string>
     <string name="saving_in_progress">Guardando…</string>
     <string name="confirmation_successfully_sent">La confirmación fue enviada al e-mail que indicaste</string>
+    <string name="password_confirmation_hint">Confirmar contraseña</string>
     <string name="password_hint">contraseña</string>
-    <string name="password_confirmation_hint">confirmación de la contraseña</string>
     <string name="enter_new_password">Introduce la contraseña nueva</string>
     <string name="enter_password_confirmation">Introduce la confirmación de la contraseña</string>
     <string name="passwords_mismatched">Contraseñas no concuerdan</string>
