--- a/src/main/res/values-it/strings.xml
+++ b/src/main/res/values-it/strings.xml
@@ -390,8 +390,8 @@
     <string name="save">Salvare</string>
     <string name="saving_in_progress">Salvataggio…</string>
     <string name="confirmation_successfully_sent">All’indirizzo e-mail da te indicato è stata inviata la conferma</string>
+    <string name="password_confirmation_hint">Conferma la password</string>
     <string name="password_hint">password</string>
-    <string name="password_confirmation_hint">conferma password</string>
     <string name="enter_new_password">Inserisci la nuova password</string>
     <string name="enter_password_confirmation">Inserisci la conferma di password</string>
     <string name="passwords_mismatched">Password errata</string>
