--- a/src/main/res/values-lt/strings.xml
+++ b/src/main/res/values-lt/strings.xml
@@ -389,8 +389,8 @@
     <string name="password_changing">Slaptažodžio keitimas</string>
     <string name="save">Išsaugoti</string>
     <string name="confirmation_successfully_sent">Patvirtinimas išsiųstas jūsų nurodytu el. pašto adresu</string>
+    <string name="password_confirmation_hint">Slaptažodžio patvirtinimas</string>
     <string name="password_hint">slaptažodis</string>
-    <string name="password_confirmation_hint">slaptažodžio patvirtinimas</string>
     <string name="enter_new_password">Įveskite naują slaptažodį</string>
     <string name="enter_password_confirmation">Įveskite slaptažodžio patvirtinimą</string>
     <string name="passwords_mismatched">Slaptažodžiai nesutampa</string>
