--- a/src/main/res/values-sr/strings.xml
+++ b/src/main/res/values-sr/strings.xml
@@ -295,8 +295,8 @@
     <string name="password_changing">Promena lozinke</string>
     <string name="save">Sačuvati</string>
     <string name="confirmation_successfully_sent">Potvrda je poslata na e-mail koji ste naveli</string>
+    <string name="password_confirmation_hint">Potvrda lozinke</string>
     <string name="password_hint">lozinka</string>
-    <string name="password_confirmation_hint">potvrda lozinke</string>
     <string name="enter_new_password">Unesite novu lozinku</string>
     <string name="enter_password_confirmation">Unesite potvrdu lozinke</string>
     <string name="passwords_mismatched">Lozinka se ne podudara</string>
