--- a/src/main/res/values-sv/strings.xml
+++ b/src/main/res/values-sv/strings.xml
@@ -353,8 +353,8 @@
     <string name="password_changing">Ändra lösenord</string>
     <string name="save">Spara</string>
     <string name="confirmation_successfully_sent">Bekräftelsen har mailats till den adress du angivit</string>
+    <string name="password_confirmation_hint">Bekärfta lösenord</string>
     <string name="password_hint">lösenord</string>
-    <string name="password_confirmation_hint">Bekräfta lösenord</string>
     <string name="enter_new_password">Skriv ett nytt lösenord</string>
     <string name="enter_password_confirmation">Ange bekräftelsen</string>
     <string name="passwords_mismatched">Lösenorden sammanfaller inte</string>
