--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -180,7 +180,7 @@
     <string name="general_sympathies">Симпатии</string>
     <string name="general_sympathy">Симпатия</string>
     <string name="general_delight">Восхищение</string>
-    <string name="general_mutual">Взаимно.</string>
+    <string name="general_mutual">Взаимно</string>
     <string name="general_dialogs">Диалоги</string>
 
     <string name="general_visitors">Гости</string>
