--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -138,6 +138,7 @@
     <string name="general_dbl_unread">Unread</string>
     <string name="general_empty_code_confirmation">Enter confirmation code</string>
     <string name="general_email_success_confirmed">Your email was successfully confirmed</string>
+    <string name="general_email_not_confirmed">Email wasn\'t confirmed</string>
     <string name="time_yesterday">Yesterday</string>
     <string name="time_today">Today</string>
     <string name="general_send_button">Send</string>
@@ -364,6 +365,8 @@
     <string name="girl">girl</string>
     <string name="start_communication">Start a chat</string>
     <string name="birthdate">BD</string>
+    <string name="birthdate_confirm">You need to specify your age to be able to meet people.</string>
+    <string name="set_birthdate">Specify age</string>
     <string name="welcome_to_topface">Welcome to Topface!</string>
     <string name="incorrect_email">Invalid email</string>
     <string name="incorrect_login">Invalid login</string>
@@ -389,8 +392,11 @@
     <string name="password_confirmation_hint">Confirm password</string>
     <string name="password_hint">password</string>
     <string name="enter_new_password">Enter your new password</string>
+    <string name="enter_old_password">Enter your previous password</string>
     <string name="enter_password_confirmation">Confirm your password</string>
     <string name="passwords_mismatched">Passwords do not match</string>
+    <string name="old_password_mismatched">Wrong previous password</string>
+    <string name="passwords_matched">New and previous password don\'t match up</string>
     <string name="passwords_changed">Password is changed</string>
     <string name="take_photo">Take a photo</string>
     <string name="take_another_photo">Another photo</string>
@@ -605,6 +611,7 @@
     <string name="enter_text">Enter text</string>
     <string name="send_feedback">Send message</string>
     <string name="get_vip_free">Get free VIP</string>
+    <string name="buy_more_sympathies">\"Get more likes, become more popular\"</string>
     <string name="google_service_general_title">Reminders are not available</string>
     <string name="google_service_disabled_title">You have Google Play disabled. You need to enable it to receive reminders.</string>
     <string name="google_service_disabled_button">Enable</string>
